# witty-jsonrpc

./: .gitignore  Cargo.toml  README.md
examples/: multiple_tcp.rs  simple_tcp.rs  tcp_subscription.rs
src/: handler.rs  lib.rs  server.rs
src/transports/: http.rs  mod.rs  tcp.rs  ws.rs
witty-jsonrpc/: Cargo.toml  LICENSE
witty-jsonrpc/examples/: all_transports.rs  multiple_tcp.rs  simple_tcp.rs  tcp_and_http.rs
witty-jsonrpc/src/: handler.rs  lib.rs  server.rs
witty-jsonrpc/src/transports/: http.rs  mod.rs  tcp.rs  ws.rs
